--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,9 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
+*.webp filter=lfs diff=lfs merge=lfs -text
+*.webm filter=lfs diff=lfs merge=lfs -text
+
 
 # Show files that are tracked by regular Git
 # Run in Terminal: git lfs status
