--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "images": "node generate-multiformat.js",
     "build-blog": "node build-blog-pages.js",
+    "build-archives": "node build-archive-pages.js",
+    "build-all": "npm run build-blog && npm run build-archives",
     "update-nav": "node add-prev-next-nav.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
